@@ -9,7 +9,6 @@ TODO: AnyEvent::Handle with AnyEvent::IO?
 TODO: invalid. and localhost. specialcasing inside AEDNS and not AESocket (rfc6761)
 TODO: maybe implement env variable to give hosts precedence
 
-TODO: mention AnyEvent::fork etc.
 	- the documentation for custom tls verify schemes was wrong. make it agree
           with the code (reported by Maxime Soulé).
 	- added cbor read and write types to AnyEvent::Handle (using CBOR::XS).
@@ -25,7 +24,11 @@ TODO: mention AnyEvent::fork etc.
 	- force a toplevel domain name in t/81_hosts.t (analyzed by
           David Jack Wange Olrik).
         - document that AnyEvent::Log uses AnyEvent::IO.
+        - warn about AnyEvent::Filesys::Notify performance.
+        - praise the joys of AnyEvent::Fork::*.
         - time for an =encoding directive.
+        - do no longer use JSON to create a default json coder, use
+          JSON::XS or JSON::PP directly.
 
 7.05 Wed Aug 21 10:38:08 CEST 2013
 	- uts46data.pl couldn't be found due to wrong naming of the file
